crates/carta/tests/snapshots/golden_e2e__csv__html__empty-fields.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<table>
<thead>
<tr>
<th>left</th>
<th>right</th>
</tr>
</thead>
<tbody>
<tr>
<td></td>
<td>filled</td>
</tr>
<tr>
<td>filled</td>
<td></td>
</tr>
<tr>
<td></td>
<td></td>
</tr>
</tbody>
</table>
